еренос генерации Prisma клиента в prebuild для корректной проверки типов TypeScript, исправление ошибок типов isClosed в reports.ts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postbuild": "npm run prisma:generate",
+    "prebuild": "npm run prisma:generate",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
