Создана миграция для добавления полей закрытия карточки (isClosed, closedAt, closedComment, closedBy), обновлены инструкции по деплою с автоматическим применением миграций

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:seed": "tsx prisma/seed.ts",
     "prisma:studio": "prisma studio",
     "telegram:setup-webhook": "tsx scripts/setup-webhook.ts"
