--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
     "@prisma/client": "^5.7.1",
+    "@types/file-saver": "^2.0.7",
     "antd": "^5.12.8",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.10",
+    "docxtemplater": "^3.67.5",
     "dotenv": "^17.2.3",
+    "file-saver": "^2.0.5",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.7",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "node-telegram-bot-api": "^0.64.0",
+    "pizzip": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -37,6 +41,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.6",
     "@types/node-telegram-bot-api": "^0.64.0",
+    "@types/pizzip": "^3.0.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "prisma": "^5.7.1",
